== 0.6.8 (2010-01-01)
  * Improved specifications for various kinds of WSDL documents.
  * Added support for SOAP endpoints which are different than the WSDL endpoint of a service.
  * Changed how SOAP actions and inputs are retrieved from the WSDL documents. This might break a few existing
    implementations, but makes Savon work well with even more services. If this change breaks your implementation,
    please take a look at the +action+ and +input+ methods of the Savon::SOAP object.
    One specific problem I know of is working with the createsend WSDL and its namespaced actions.
    To make it work, call the SOAP action without namespace and specify the input manually:
    client.get_api_key { |soap| soap.input = "User.GetApiKey" }

== 0.6.7 (2009-12-18)
  * Implemented support for a proxy server. The proxy URI can be set through an optional Hash of options passed
    to instantiating Savon::Client (Dave Woodward <dave@futuremint.com>)
  * Implemented support for SSL client authentication. Settings can be set through an optional Hash of arguments
    passed to instantiating Savon::Client (colonhyphenp)
  * Patch for issue #10 (Problem with operation tags without a namespace).

== 0.6.6 (2009-12-14)
  * Default to use the name of the SOAP action (the method called in a client) in lowerCamelCase for SOAP action
    and input when Savon::WSDL is disabled. You still need to specify soap.action and maybe soap.input in case
    your SOAP actions are named any different.

== 0.6.5 (2009-12-13)
  * Added an open_timeout method to Savon::Request.

== 0.6.4 (2009-12-13)
  * Refactored specs to be less unit-like.
  * Added a getter for the Savon::Request to Savon::Client and a read_timeout setter for HTTP requests.
  * wsdl.soap_actions now returns an Array of SOAP actions. For the previous "mapping" please use wsdl.operations.
  * Replaced WSDL document with stream parsing.

    Benchmarks (1000 SOAP calls):

           user        system     total       real